--- a/Lesson6_Assignment_Sp16/photos.htm
+++ b/Lesson6_Assignment_Sp16/photos.htm
@@ -5,7 +5,7 @@
     Program Name:  Photo Gallery Application
     Author: Natalie Bosso
     Date:   30 March 2016
-    Filename: photos.html
+    Filename: photos.htm
    -->
    <meta charset="utf-8" />
    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
